syntax = "proto3";

package pb;

option go_package = "github.com/ebukacodes21/soleluxury-server/pb";

import "general.proto";

message CreateCategoryRequest {
    string store_id = 1;
    string billboard_id = 2;
    string name = 3;
}

message CreateCategoryResponse {
    Category category = 1;
}

message GetCategoryRequest {
    string id = 1;
}

message GetCategoryResponse {
    Category category = 1;
}

message GetCategoriesRequest {
    string store_id = 1;
}

message GetCategoriesResponse {
    repeated Category categories = 1;
}

message UpdateCategoryRequest {
    string id = 1;
    string billboard_id = 2;
    string name = 3;
}

message UpdateCategoryResponse {
   string message = 1;
}

message DeleteCategoryRequest {
    string id = 1;
}

message DeleteCategoryResponse {
    string message = 1;
}